2. Виды сборщиков мусоров[#210846]