@@ -1,5 +1,26 @@
 package ru.job4j.gc;
 
+/**
+ * Пример программы, которую запускаем с разными настройками для GC, устанавливаем их
+ * поочереди в "VM options".
+ * Чтобы выводить некую информацию о GC в VM options прописал команду: -verbose:gc
+ * Мониторим состояние памяти с помощью утилитной программы MemoryUtil и
+ * ее метода printUsage(true).
+ * <p>
+ * 1) запуск программы, когда все циклы закомментированны (калибровка)
+ * 2) задаем размер памяти (heap) 4 mB (максимум и начальная)
+ * * -Xmx4m -Xms4m
+ * 3) запуск программы с установками по умолчанию
+ * и потом устанавливаем такие параметры -Xmx12m -Xms3m -Xmn1m -XX:+UseG1GC
+ * 4) вызываем Serial Collector -XX:+UseSerialGC
+ * -Xmx12m -Xms3m -Xmn1m -XX:+UseSerialGC
+ * 5) вызываем Parallel Collector -XX:+UseParallelGC
+ * -Xmx12m -Xms3m -Xmn1m -XX:+UseParallelGC
+ * 6) вызываем Parallel Compacting Collector -XX:+UseParallelOldGC
+ * -Xmx12m -Xms3m -Xmn1m -XX:+UseParallelOldGC
+ * 7) вызываем Concurrent Mark-Sweep (CMS) Collector -XX:+UseConcMarkSweepGC
+ * -Xmx12m -Xms3m -Xmn1m -XX:+UseConcMarkSweepGC
+ */
 public class GCExample {
 
     private static final long KB = 1024; //коэффициент килло
@@ -7,20 +28,25 @@ public class GCExample {
     private static final Runtime ENVIRONMENT = Runtime.getRuntime();
 
     public static void main(String[] args) {
+        MemoryUtil.printUsage(true);
 
         long start = System.currentTimeMillis();
-        infoInMB();
-        infoInBytes();
+//        infoInMB();
+//        infoInBytes();
 //        System.out.println(new User(1, "name" + 1));
 //        System.out.println(new User(2, "name" + 2));
+//        System.out.println("Создаются объекты ...");
 
-        for (int i = 0; i < 10; i++) {
-//            System.out.println(new User(i, "name" + i));
-            System.out.println(new UserEmpty());
+        for (int i = 0; i < 10000; i++) {
+            new User(i, "name" + i);
+////            System.out.println(new User(i, "name" + i));
+////            System.out.println(new UserEmpty());
         }
-
-        infoInMB();
-        infoInBytes();
+        System.out.println("Объекты созданы.");
+        System.gc();
+//        infoInMB();
+//        infoInBytes();
+        MemoryUtil.printUsage(true);
         System.out.println("Lead time: " + (System.currentTimeMillis() - start));
     }
 
